# slh-dsa-stark-bench

./: .gitignore  Cargo.toml  INSTALL-UBUNTU-GPU.md  README.md  flake.nix
cli/: Cargo.toml
cli/src/: keygen.rs  prove.rs  sign.rs  util.rs  verify.rs
demo/: bench-amd-ryzen5-8540u.txt  bench-amd-ryzen5-8640u.csv  bench-amd-ryzen5-8640u.txt  bench-nvidia-b200.csv  bench-nvidia-b200.txt  bench-nvidia-rtx-5090.csv  bench-nvidia-rtx-5090.txt  plot.py  run.sh
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
sha2-risc0/: Cargo.toml
sha2-risc0/src/: compress.rs  consts.rs  lib.rs
slh-dsa/: Cargo.toml
slh-dsa/src/: address.rs  fors.rs  hash.rs  hypertree.rs  lib.rs  params.rs  wots.rs  xmss.rs
slh-dsa/tests/: test_vectors.rs
