[workspace]
resolver = "2"
members = ["cli", "methods", "slh-dsa", "sha2-risc0"]

[workspace.dependencies]
risc0-zkvm = { version = "3.0", default-features = false }
risc0-build = { version = "3.0" }
risc0-zkvm-platform = { version = "2.2" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
lto = true
