[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2", default-features = false, features = ["prove"] }
slh-dsa = { path = "../slh-dsa" }
bincode = { version = "1.3", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "std"] }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]

[[bin]]
name = "keygen"
path = "src/keygen.rs"

[[bin]]
name = "sign"
path = "src/sign.rs"

[[bin]]
name = "prove"
path = "src/prove.rs"

[[bin]]
name = "verify"
path = "src/verify.rs"
