[package]
name = "sha2-risc0"
version = "0.1.0"
edition = "2021"
description = "SHA-256 with optional RISC Zero zkVM acceleration"

[dependencies]
risc0-zkvm-platform = { workspace = true, optional = true }

[features]
default = []
# Route SHA-256 compression through RISC Zero's accelerator circuit.
# Only effective when compiled for riscv32im-risc0-zkvm-elf.
risc0 = ["dep:risc0-zkvm-platform"]
