[package]
name = "verify_signatures"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "3.0", default-features = false, features = ['std'] }
slh-dsa = { path = "../../slh-dsa", features = ["risc0"] }
sha2-risc0 = { path = "../../sha2-risc0", features = ["risc0"] }
